@@ -1,14 +1,0 @@
-#!/bin/sh
-
-sudo dnf install -y \
-    bison \
-    cmake \
-    libnauty-devel \
-    make \
-    perl-devel \
-    perl-Module-ScanDeps \
-    perl-Parse-Yapp \
-    python3-devel \
-    redhat-rpm-config \
-    swig \
-;
