@@ -1,7 +1,0 @@
-#!/bin/sh
-
-sudo dnf install -y \
-    perl-Test-More-UTF8 \
-    perl-Text-Diff \
-    perl-FindBin \
-;
