@@ -80,6 +80,8 @@ cod-tools (unreleased)
           group settings.
     - eliminated absolute paths from Makefiles to avoid caching problems.
     - mutually recursive import problem in Perl 5.40.
+  * Removed:
+    - dependency installer for Fedora 39.
 
 cod-tools (3.10.0)
 
